--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
+
+
+spring.jpa.hibernate.ddl-auto
+spring.jpa.show-sql
+
