--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.datasource.username=
 spring.datasource.password=
 
 
-spring.jpa.hibernate.ddl-auto
-spring.jpa.show-sql
+spring.jpa.hibernate.ddl-auto=
+spring.jpa.show-sql=
 
