--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,16 +3,16 @@ spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-<<<<<<< HEAD
+#<<<<<<< HEAD
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-=======
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
-
-
-spring.jpa.hibernate.ddl-auto=
-spring.jpa.show-sql=
-
->>>>>>> a4afc433ec6b683e4b1cd974144574942894ad4a
+#=======
+#spring.datasource.url=
+#spring.datasource.username=
+#spring.datasource.password=
+#
+#
+#spring.jpa.hibernate.ddl-auto=
+#spring.jpa.show-sql=
+#
+#>>>>>>> a4afc433ec6b683e4b1cd974144574942894ad4a
