--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/your_database
-spring.datasource.username=your_username
-spring.datasource.password=your_password
+
+spring.datasource.url=jdbc:mysql://localhost:3306/qwe
+spring.datasource.username=root
+spring.datasource.password=1234
+
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
