--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/qwe
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
 
 
 spring.jpa.hibernate.ddl-auto=update
