--- a/pom.xml
+++ b/pom.xml
@@ -27,20 +27,17 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
-		<!-- Spring AOP для аспектов -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-aop</artifactId>
-		</dependency>
-
-		<!-- OpenAPI (springdoc) -->
+		<!-- SpringDoc OpenAPI -->
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>${springdoc.version}</version>
 		</dependency>
-
+		<!-- Spring AOP для аспектов -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
 		<!-- Lombok -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -48,25 +45,34 @@
 			<version>1.18.34</version>
 			<scope>provided</scope>
 		</dependency>
-
 		<!-- JPA и MySQL -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
 			<version>8.0.33</version>
 			<scope>runtime</scope>
 		</dependency>
-
+		<!-- Flyway -->
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+			<version>10.20.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-mysql</artifactId>
+			<version>10.20.1</version>
+		</dependency>
 		<!-- SLF4J для логирования -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
+			<version>2.0.16</version>
 		</dependency>
-
 		<!-- Тестирование -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -79,6 +85,13 @@
 			<version>${mockito.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- H2 для тестирования -->
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>2.3.230</version>
+			<scope>runtime</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -88,20 +101,15 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-					<mainClass>orf.demo.service.DemoApplication</mainClass>
+					<mainClass>orf.demo.DemoApplication</mainClass>
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
 						</exclude>
-						<exclude>
-							<groupId>org.slf4j</groupId>
-							<artifactId>slf4j-api</artifactId>
-						</exclude>
 					</excludes>
 				</configuration>
 			</plugin>
-
 			<!-- Maven Compiler Plugin -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -118,7 +126,6 @@
 					</annotationProcessors>
 				</configuration>
 			</plugin>
-
 			<!-- Checkstyle -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -148,7 +155,6 @@
 					</dependency>
 				</dependencies>
 			</plugin>
-
 			<!-- JaCoCo -->
 			<plugin>
 				<groupId>org.jacoco</groupId>
@@ -186,7 +192,7 @@
 								</rule>
 							</rules>
 							<excludes>
-								<exclude>orf/demo/service/DemoApplication.class</exclude>
+								<exclude>orf/demo/DemoApplication.class</exclude>
 								<exclude>orf/demo/model/*.class</exclude>
 							</excludes>
 						</configuration>
@@ -196,7 +202,6 @@
 		</plugins>
 	</build>
 
-	<!-- Репозитории -->
 	<repositories>
 		<repository>
 			<id>central</id>
@@ -204,7 +209,6 @@
 		</repository>
 	</repositories>
 
-	<!-- Репозитории для плагинов -->
 	<pluginRepositories>
 		<pluginRepository>
 			<id>central</id>
